tests/snapshots/aether/aether__aether__fbip_fail_nonfip_call__dump_aether.snap
---
source: tests/aether/cli_snapshots.rs
---
[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 1 error • examples/compiler_errors/fbip_fail_nonfip_call.flx
error[E999]: FBIP Contract Failed

@fbip on `bounded` analysis result NotProvable:
- calls indirect or opaque callee `f` whose FBIP behavior is unknown

  examples/compiler_errors/fbip_fail_nonfip_call.flx:10:7
   |
10 | @fbip fn bounded(f, x) {
   |       ^^^^^^^^^^^^^^^^

Hint:
  Annotate only functions whose fresh allocations remain provably bounded.
